force-app/main/default/objects/B4u_Updates__c/B4u_Updates__c.object-meta.xml
<CustomObject>
    <label>B4u Updates</label>
    <nameField>
        <displayFormat>B4u-{000000000}</displayFormat>
        <label>B4u Updates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B4U Updates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>