force-app/main/default/objects/B4u_Updates__c/fields/B4u_Status__c.field-meta.xml
<CustomField>
    <fullName>B4u_Status__c</fullName>
    <label>B4u Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>