force-app/main/default/objects/B4u_Updates__c/fields/B4u_Tz__c.field-meta.xml
<CustomField>
    <fullName>B4u_Tz__c</fullName>
    <label>B4u Tz</label>
    <length>15</length>
    <type>Text</type>
</CustomField>