force-app/main/default/objects/B4u_Updates__c/fields/EventIDCompletedBySsn__c.field-meta.xml
<CustomField>
    <fullName>EventIDCompletedBySsn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EventIDCompletedBySsn</label>
    <type>Checkbox</type>
</CustomField>