force-app/main/default/objects/B4u_Updates__c/fields/Full_Record_Updated_ID__c.field-meta.xml
<CustomField>
    <fullName>Full_Record_Updated_ID__c</fullName>
    <formula>casesafeid( Updated_Record_Id__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Record Updated ID</label>
    <type>Text</type>
</CustomField>