force-app/main/default/objects/B4u_Updates__c/fields/Has_Good_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Has_Good_Record_Id__c</fullName>
    <formula>len(Full_Record_Updated_ID__c) = 18</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Good Record Id</label>
    <type>Checkbox</type>
</CustomField>