force-app/main/default/objects/B4u_Updates__c/fields/Meeting_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Time__c</fullName>
    <label>Meeting Time</label>
    <type>DateTime</type>
</CustomField>