force-app/main/default/objects/B4u_Updates__c/fields/NrmlzdSsn__c.field-meta.xml
<CustomField>
    <fullName>NrmlzdSsn__c</fullName>
    <formula>right(lpad(substitute(substitute(  B4u_Tz__c  ,&quot;/&quot;,&quot;&quot;),&quot;-&quot;,&quot;&quot;),9,&quot;0&quot;),9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NrmlzdSsn</label>
    <type>Text</type>
</CustomField>