force-app/main/default/objects/B4u_Updates__c/fields/Old_Record_For_Deletion__c.field-meta.xml
<CustomField>
    <fullName>Old_Record_For_Deletion__c</fullName>
    <formula>TODAY() - DATEVALUE( CreatedDate ) &gt;=180</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Record For Deletion</label>
    <type>Checkbox</type>
</CustomField>