force-app/main/default/objects/B4u_Updates__c/fields/Updated_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Updated_Record_Id__c</fullName>
    <label>Updared Record Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>