force-app/main/default/objects/B4u_Updates__c/fields/Upload_Result__c.field-meta.xml
<CustomField>
    <fullName>Upload_Result__c</fullName>
    <label>Upload Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Found Meeting Id And Updated Meeting And Also Lead</fullName>
            </value>
            <value>
                <fullName>Record Id For Update Not Found</fullName>
            </value>
            <value>
                <fullName>RecordId For Update Is Not Legit</fullName>
            </value>
            <value>
                <fullName>Found Only Lead Without Meeting</fullName>
            </value>
            <value>
                <fullName>Found Only Meeting Without Lead</fullName>
            </value>
            <value>
                <fullName>Check Dates</fullName>
            </value>
            <value>
                <fullName>Cant Be Updated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>